--- a/robocza_nazwa/pubspec.yaml
+++ b/robocza_nazwa/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.0
   page_transition: ^2.0.9
+  dotted_line: ^3.2.2
 
 dev_dependencies:
   flutter_test:
