--- a/robocza_nazwa/android/app/src/main/AndroidManifest.xml
+++ b/robocza_nazwa/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="robocza_nazwa"
+        android:label="Planix"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
